# rapid-toolpath-viewer

./: .gitignore  CLAUDE.md  build.bat  build_icon.py  create_shortcut.ps1  pyproject.toml  rapid_viewer.spec
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: toolpath-not-rendering-loop.md
.planning/phases/01-parser-and-file-loading/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-3d-viewer-and-camera/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-playback-code-panel-and-linking/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/rapid_viewer/: app_meta.py  main.py
tests/: conftest.py  test_camera.py  test_code_panel.py  test_commands.py  test_edit_model.py  test_geometry_builder.py  test_linking.py  test_main_window.py  test_mod_writer.py  test_parser.py  test_playback_state.py  test_playback_toolbar.py  test_property_panel.py  test_rapid_highlighter.py  test_selection_state.py  test_viewer_widget.py
tests/fixtures/: moveabsj.mod  movecircular.mod  multiline.mod  multiproc.mod  offs_inline.mod  simple.mod
(+56 files in other folders)
