[project]
name = "rapid-viewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
